# srt-subtitle-translator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTINUE.md  CONTINUE_TASK3.md  CONTRIBUTING.md  README.md  cache.py  config_manager.py  file_handler.py  gui_components.py  model_manager.py  ollama_client.py  prompt.py  pyproject.toml  requirements.txt  services.py  srt-translator.py  translation_client.py  translation_manager.py
.github/workflows/: ci.yml
backup_old_files/: prompt.py  srt-translator.py  utils.py
docs/: API.md  CLEANUP_CHECKLIST.md  CLEANUP_FOLLOWUP_CHECKLIST.md  CLEANUP_STATUS.md  DEPENDENCY_MAINTENANCE.md  DEVELOPMENT.md  ENGLISH_DRAMA_GUIDE.md  TESTING.md  USER_GUIDE.md  llamacpp-setup-guide.md  ollama-setup-guide.md  whisperjav-setup-guide.md
docs/archive/cleanup/: 2026-05-cleanup-followup.md
src/srt_translator/: __init__.py  __main__.py  cli.py  version.py
src/srt_translator/core/: __init__.py  cache.py  config.py  glossary.py  models.py  prompt.py  singleton.py
src/srt_translator/file_handling/: __init__.py  handler.py
src/srt_translator/gui/: __init__.py  components.py
src/srt_translator/services/: __init__.py  factory.py
src/srt_translator/tools/: __init__.py  srt_tools.py
src/srt_translator/translation/: __init__.py  client.py  manager.py
src/srt_translator/utils/: __init__.py  errors.py  helpers.py  logging_config.py  post_processor.py  tkdnd_check.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_basic_translation.py  test_batch_processing.py  test_config_integration.py  test_error_handling.py  test_performance.py  test_translation_workflow.py
tests/e2e/fixtures/: config_custom.json  config_invalid.json  invalid.srt  large_sample.srt  long_subtitle.srt  sample.srt  sample_japanese.srt  sample_simplified_chinese.srt  special_chars.srt  very_large.srt
tests/e2e/fixtures/batch/: file1.srt  file2.srt  file3.srt
tests/e2e/fixtures/expected/: sample_translated.srt
tests/integration/: __init__.py  conftest.py  test_cache_integration.py  test_config_integration.py
tests/unit/: test_cli.py  test_main.py
tests/unit/core/: __init__.py  conftest.py  test_cache.py  test_cache_extended.py  test_config.py  test_config_extended.py  test_glossary.py  test_models.py  test_models_extended.py  test_prompt.py
tests/unit/file_handling/: __init__.py  test_handler.py
tests/unit/services/: test_factory.py
tests/unit/tools/: test_batch_integration.py  test_srt_tools.py
tests/unit/translation/: __init__.py  conftest.py  test_client.py  test_manager.py
tests/unit/utils/: __init__.py  test_errors.py  test_helpers.py  test_helpers_extended.py  test_logging_config.py  test_post_processor.py
